--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,16 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
     tools:context=".SettingsFragment">
 
     <TextView
+        android:id="@+id/settingsTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Settings Fragment"
-        android:textSize="26sp"
-        android:layout_gravity="center"
+        android:layout_marginTop="5dp"
+        android:gravity="center_vertical"
+        android:text="Settings"
+        android:textColor="@color/WhiteishTextColor"
+        android:textStyle="bold"
         tools:ignore="HardcodedText" />
 
-</FrameLayout>
+    <View
+        android:id="@+id/delimitingLine"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:layout_marginTop="15dp"
+        android:background="#FFFFFF"
+        app:layout_constraintHorizontal_bias="0.0" />
+
+    <Button
+    android:id="@+id/submitButton"
+    android:layout_marginTop="15dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Change master password"
+    android:textSize="26sp"
+    android:textStyle="bold"
+    android:typeface="sans"
+    android:textColor="@color/WhiteishTextColor"
+    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+    android:background="@color/SwitchOn"
+    android:paddingStart="10dp"
+    android:paddingEnd="10dp"
+    tools:ignore="HardcodedText" />
+
+    <Button
+        android:id="@+id/logOutButton"
+        android:layout_marginTop="15dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Log out"
+        android:textSize="26sp"
+        android:textStyle="bold"
+        android:typeface="sans"
+        android:textColor="@color/WhiteishTextColor"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:background="@color/RedGradient"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        tools:ignore="HardcodedText" />
+</LinearLayout>
