Reset Master Password [WIP]

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -28,7 +28,7 @@
         app:layout_constraintHorizontal_bias="0.0" />
 
     <Button
-    android:id="@+id/submitButton"
+    android:id="@+id/changeMasterPasswordButton"
     android:layout_marginTop="15dp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
