--- a/app/src/main/res/layout/fragment_vault.xml
+++ b/app/src/main/res/layout/fragment_vault.xml
@@ -37,7 +37,7 @@
             android:id="@+id/searchItem"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_toStartOf="@+id/addButton"
+            android:layout_toStartOf="@+id/searchButton"
             android:gravity="center_vertical"
             android:inputType="text"
             android:text=""
@@ -49,8 +49,7 @@
             android:id="@+id/searchButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="5dp"
+            android:layout_toStartOf="@id/addButton"
             android:background="@android:color/transparent"
             android:contentDescription="button to search for an element"
             android:src="@drawable/search"
@@ -60,7 +59,8 @@
             android:id="@+id/addButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toStartOf="@id/searchButton"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="5dp"
             android:background="@android:color/transparent"
             android:contentDescription="button to add element to vault"
             android:src="@drawable/add"
