Email addresses are now verified with Mailerloo API, the key is stored in local.properties. Added functionality to edit and delete items in your personal vault.

--- a/app/src/main/res/layout/fragment_edit_element.xml
+++ b/app/src/main/res/layout/fragment_edit_element.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:background="#01090E"
+    android:gravity="center"
     tools:context=".EditElementFragment">
 
     <LinearLayout
@@ -14,13 +14,37 @@
         android:orientation="vertical"
         android:padding="10dp">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="end">
+
+            <ImageButton
+                android:id="@+id/closeButtonEditDialog"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:background="@android:color/transparent"
+                android:clickable="true"
+                android:contentDescription="Close Button"
+                android:focusable="true"
+                android:scaleType="fitCenter"
+                android:src="@drawable/close"
+                android:text="Close"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textColor="@color/WhiteishTextColor"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:typeface="sans"
+                tools:ignore="HardcodedText,TouchTargetSizeCheck" />
+        </LinearLayout>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:text="URL"
             android:textColor="@color/WhiteishTextColor"
             android:textSize="16sp"
-            android:text="URL"
             tools:ignore="HardcodedText" />
 
         <EditText
@@ -36,48 +60,47 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginTop="15dp"
+            android:text="Username"
             android:textColor="@color/WhiteishTextColor"
             android:textSize="16sp"
-            android:layout_gravity="center"
-            android:text="Username"
             tools:ignore="HardcodedText" />
 
         <EditText
+            android:id="@+id/textFieldUsername"
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:inputType="text"
-            android:id="@+id/textFieldUsername"
             android:layout_marginBottom="15dp"
+            android:inputType="text"
             android:textColor="@color/WhiteishTextColor"
             tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginTop="15dp"
+            android:text="Password"
             android:textColor="@color/WhiteishTextColor"
             android:textSize="16sp"
-            android:layout_gravity="center"
-            android:text="Password"
             tools:ignore="HardcodedText" />
 
-        <com.google.android.material.textfield.TextInputLayout
-            xmlns:app="http://schemas.android.com/apk/res-auto"
+        <com.google.android.material.textfield.TextInputLayout xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:passwordToggleEnabled="true"
             app:passwordToggleTint="@color/SwitchOff">
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:id="@+id/textFieldPassword"
-            android:inputType="textPassword"
-            android:layout_marginBottom="15dp"
-            android:background="@android:color/transparent"
-            android:textColor="@color/WhiteishTextColor"
-            tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />
+            <EditText
+                android:id="@+id/textFieldPassword"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginBottom="15dp"
+                android:background="@android:color/transparent"
+                android:inputType="textPassword"
+                android:textColor="@color/WhiteishTextColor"
+                tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <LinearLayout
@@ -86,34 +109,35 @@
             android:gravity="center"
             android:orientation="horizontal">
 
-        <Button
-            android:layout_width="75dp"
-            android:layout_height="wrap_content"
-            android:text="Save"
-            android:textColor="@color/WhiteishTextColor"
-            android:layout_marginEnd="50dp"
-            android:textSize="16sp"
-            android:id="@+id/saveButton"
-            android:background="#650DD9"
-            tools:ignore="HardcodedText"
-            android:textStyle="bold"
-            android:typeface="sans"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            style="?android:attr/buttonBarButtonStyle" />
+            <Button
+                android:id="@+id/saveButtonEditDialog"
+                style="?android:attr/buttonBarButtonStyle"
+                android:layout_width="75dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="50dp"
+                android:background="#650DD9"
+                android:text="Save"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textColor="@color/WhiteishTextColor"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:typeface="sans"
+                tools:ignore="HardcodedText" />
 
-        <Button
-            android:layout_width="75dp"
-            android:layout_height="wrap_content"
-            android:text="Close"
-            android:textColor="@color/WhiteishTextColor"
-            android:textSize="16sp"
-            android:id="@+id/closeButton"
-            android:background="#650DD9"
-            tools:ignore="HardcodedText"
-            android:textStyle="bold"
-            android:typeface="sans"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            style="?android:attr/buttonBarButtonStyle" />
+            <Button
+                android:id="@+id/deleteButtonEditDialog"
+                style="?android:attr/buttonBarButtonStyle"
+                android:layout_width="75dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="50dp"
+                android:background="@color/RedGradient"
+                android:text="Delete"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textColor="@color/WhiteishTextColor"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:typeface="sans"
+                tools:ignore="HardcodedText" />
         </LinearLayout>
 
     </LinearLayout>
