Users can now change their master password, accounts still being linked properly. When creating an account and logging in, it's no longer possible to return to old creation activity with the data inside, it will create a new one.

--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -61,12 +61,11 @@
         <Button
             android:layout_width="75dp"
             android:layout_height="wrap_content"
-            android:text="Save"
+            android:text="Close"
             android:textColor="@color/WhiteishTextColor"
-            android:layout_marginEnd="50dp"
             android:textSize="16sp"
-            android:id="@+id/saveButton"
-            android:background="#650DD9"
+            android:id="@+id/closePasswordUpdateButton"
+            android:background="@color/RedGradient"
             tools:ignore="HardcodedText"
             android:textStyle="bold"
             android:typeface="sans"
@@ -76,16 +75,18 @@
         <Button
             android:layout_width="75dp"
             android:layout_height="wrap_content"
-            android:text="Close"
+            android:text="Save"
             android:textColor="@color/WhiteishTextColor"
+            android:layout_marginStart="50dp"
             android:textSize="16sp"
-            android:id="@+id/closeButton"
+            android:id="@+id/savePasswordUpdateButton"
             android:background="#650DD9"
             tools:ignore="HardcodedText"
             android:textStyle="bold"
             android:typeface="sans"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             style="?android:attr/buttonBarButtonStyle" />
+
         </LinearLayout>
 
     </LinearLayout>
