--- a/app/src/main/res/layout/create_account_layout.xml
+++ b/app/src/main/res/layout/create_account_layout.xml
@@ -201,7 +201,7 @@
         android:layout_width="321dp"
         android:layout_height="48dp"
         android:layout_marginStart="8dp"
-        android:checked="false"
+        android:checked="true"
         android:text="Check known data breaches for this password"
         android:textOff="Off"
         android:textOn="On"
